--- a/stylesheet/index.css
+++ b/stylesheet/index.css
@@ -13,7 +13,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #f7f6f6;
+  background-color: #ced4f7;
   min-height: 100vh;
 }
 
@@ -51,34 +51,6 @@ form button {
   font-family: "Poppins", sans-serif;
   font-size: 5rem;
   color: white;
-}
-
-.hero-todos {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 60rem;
-          flex: 1 1 60rem;
-}
-
-.hero-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 60rem;
-          flex: 1 1 60rem;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-.the-img {
-  height: 50rem;
-  width: 55rem;
 }
 
 .hero-todos {
@@ -160,5 +132,31 @@ form button {
 
 .check {
   background: #63ff97;
+}
+
+@media screen and (max-width: 400px) {
+  .brand-name {
+    font-size: 3rem;
+  }
+  .input {
+    height: 5rem;
+    width: 30rem;
+    font-size: 4rem;
+  }
+  .btn-add {
+    height: 5rem;
+    width: 5rem;
+    font-size: 3.5rem;
+  }
+  .task {
+    height: 5rem;
+    width: 25rem;
+    font-size: 3.5rem;
+  }
+  .list-button {
+    height: 5rem;
+    width: 5rem;
+    font-size: 3.5rem;
+  }
 }
 /*# sourceMappingURL=index.css.map */
